# tp3_agentic_ai

./: README.md  doc.txt  main.py  pyproject.toml  sma.ipynb
